added get brands of category
